# ase2025-starter-kit

./: README.md  baselines.py  prepare_data.sh  pyproject.toml  validate_submission.py
data/: completion_points_start.jsonl  python-start.jsonl
